--- a/Excercise/Modul-02/excercise1/style/style.css
+++ b/Excercise/Modul-02/excercise1/style/style.css
@@ -35,6 +35,7 @@ body {
     background-color: #010101;
     color: #ffffff;
     width: auto;
+    padding: 0.25em 0em;
 }
 
 /* NAV Bar */
@@ -42,7 +43,7 @@ body {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    background-color: grey;
+    /* background-color: grey; */
     padding: 0.8em;
     z-index: 999;
 }
@@ -54,7 +55,7 @@ body {
     font-weight: 700;
     font-style: normal;
     justify-content: space-between;
-    background-color: pink;
+    /* background-color: pink; */
 }
 .navbar .navbar_logo a {
     color: var(--font);
@@ -67,7 +68,7 @@ body {
 
 .navbar .navbar-nav {
     text-align: center;
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
 .navbar .navbar-nav a {
@@ -81,7 +82,7 @@ body {
 
 .navbar .navbar-extra {
     text-align: center;
-    background-color: #865439;
+    /* background-color: #865439; */
 }
 
 .navbar .navbar-extra a {
@@ -92,23 +93,24 @@ body {
 /* HERO SECTION */
 .hero .hero-grid {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    background-color: #2196F3;
+    grid-template-columns: auto auto 25% 25%;
+    grid-template-rows: 55vh 30vh;
+    /* background-color: #2196F3; */
     /* padding: 10px; */
     margin: 0.5em 1em;
-    gap : 0.1em;
+    gap : 0.5em;
 }
 
 .hero .hero-grid .hero-grid-item {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    border: none;
     padding: 20px;
     font-size: 30px;
     text-align: center; 
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 1em;
 }
 
 #item1 {
@@ -117,15 +119,79 @@ body {
     grid-column-start: 1;
     grid-column-end: 3;
     padding: 0;
+    background-image: url('./hero_pic.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
 }
 
-#item1 > img {
-    width: 20em;
-}
 
 #item2 {
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 3;
     grid-column-end: 5;
+    background-color: #d4d3cf;
+    display: inline;
+    /* width: 40; */
+    position: relative;
+    padding: 1em;
+    
 }
+
+#item2 h1 {
+    /* background-color: #865439; */
+    font-size: 2.25em;
+    text-align: left;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+#item2 p {
+    display: block;
+    position: absolute;
+    /* background-color: #865439; */
+    font-size: 0.5em;
+    text-align: left;
+    bottom: 1em;
+    padding-bottom: 0.5em;
+
+}
+
+#item3 {
+    background-image: url('./bucket_hat.webp');
+    filter: grayscale(70%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+#item3 p,
+#item4 p {
+    /* background-color: #865439; */
+    position: absolute;
+    display: block;
+    bottom: 0.5em;
+    left: 1em;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    text-align: left;
+    color: #ffffff;
+    font-size: 0.8em;
+}
+
+#item4 {
+    position: relative;
+    background-image: url('./snapback_hat.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: grayscale(70%);
+    /* -webkit-filter: grayscale(1); */
+}
+
