--- a/Excercise/Modul-02/slicing1/style/style.css
+++ b/Excercise/Modul-02/slicing1/style/style.css
@@ -35,7 +35,7 @@ body {
     background-color: #010101;
     color: #ffffff;
     width: auto;
-    padding: 0.25em 0em;
+    padding: 0.25rem 0rem;
 }
 
 /* NAV Bar */
@@ -62,7 +62,7 @@ body {
 }
 
 .navbar .navbar_logo a img {
-    width: 2.5em;
+    width: 2.5rem;
     /* background-color: pink; */
 }
 
@@ -119,12 +119,84 @@ body {
     grid-column-start: 1;
     grid-column-end: 3;
     padding: 0;
-    background-image: url('./hero_pic.jpg');
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
+    /* background-image: url('./hero_pic.jpg'); */
+    /* background-size: cover;
+    background-position: center; */
+    /* width: 100%;
+    height: 100%; */
+    /* background-color: #865439; */
+    display: flex;
+    position: relative;
+    align-items: center;
+    overflow: hidden;
+    /* 
+        Overflow digunakan untuk menentukan clipping object, 
+        apakah akan ditambahkan scroll, etc
+    */
 }
+
+#item1 img {
+    flex-shrink: 0;
+    min-width: 100%;
+    max-height: 100%;
+    border-radius: 1rem;
+}
+
+#item1 #form-container {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    /* background-color: #d4d3cf; */
+    bottom: 1rem;
+    width: 100%;
+    align-content: center;
+}
+
+.form-content {
+    margin: 0 2rem;
+    border: 1.5px solid var(--bg);
+    font-size: 1rem;
+    color: var(--bg);
+    padding: 1rem 8rem 1rem 1rem;
+    border-radius: 2rem;
+    position: relative;
+    display: flex;
+}
+
+.form-content p {
+    display: inline;
+    font-size: 1.2rem;
+    /* background-color: #865439; */
+    font-weight: 400;
+}
+
+.form-content span {
+    position: absolute;
+    top: 15%;
+    right: 0.4rem;
+    border: 1.5px solid var(--bg);
+    padding: 0.5rem;
+    border-radius: 1.5rem;
+    background-color: var(--bg);
+    color: var(--font);
+}
+
+.form-content:hover {
+    background-color: var(--bg);
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.form-content:hover p {
+    color: var(--font);
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.form-content:hover span {
+    background-color: var(--font);
+    color: var(--bg);
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
 
 
 #item2 {
@@ -162,11 +234,23 @@ body {
 }
 
 #item3 {
-    background-image: url('./bucket_hat.webp');
+    /* background-image: url('./bucket_hat.webp'); */
     filter: grayscale(70%);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+    /* background-position: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 0;
+}
+
+#item3 img {
+    flex-shrink: 0;
+    min-width: 100%;
+    max-height: 100%;
+    border-radius: 1rem;
 }
 
 #item3 p,
@@ -187,11 +271,23 @@ body {
 
 #item4 {
     position: relative;
-    background-image: url('./snapback_hat.jpg');
+    /* background-image: url('./snapback_hat.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     filter: grayscale(70%);
     /* -webkit-filter: grayscale(1); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 0;
+}
+
+#item4 img {
+    flex-shrink: 0;
+    min-width: 100%;
+    max-height: 100%;
+    border-radius: 1rem;
 }
 
